--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -155,8 +155,8 @@ $max-width: $x-large !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow: 200px !default;
-$right-sidebar-width: 180px !default;
+$right-sidebar-width-narrow: 250 !default;
+$right-sidebar-width: 250px !default;
 $right-sidebar-width-wide: 300px !default;
 
 /*
