--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -157,8 +157,10 @@ $max-width: $x-large !default;
 
 $right-sidebar-width-narrow: 150px !default;
 $right-sidebar-width: 200px !default;
-$right-sidebar-width-wide: 300px !default;
-
+$right-sidebar-width-wide: 250px !default;
+// $right-sidebar-width-narrow: 200px !default;
+// $right-sidebar-width: 300px !default;
+// $right-sidebar-width-wide: 400px !default;
 /*
    Other
    ========================================================================== */
