--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,12 +1,10 @@
 ---
 layout: archive
+author_profile: true
 sidebar:
-  nav: "docs"
+    nav: "docs"
 ---
-hahaha
-
 {{ content }}
-
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
   {% if category[1].size > categories_max %}
