--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -4,6 +4,7 @@ author_profile: true
 sidebar:
     nav: "docs"
 ---
+{% include sidebar.html %}
 {{ content }}
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
