--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -5,6 +5,7 @@ sidebar:
     nav: "docs"
 ---
 {% include sidebar.html %}
+sidebar add
 {{ content }}
 {% assign categories_max = 0 %}
 {% for category in site.categories %}
