--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -489,12 +489,12 @@
 }
 
 .nav__sub-title {
-  display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
   font-family: $sans-serif-narrow;
-  font-size: $type-size-5;
+  font-size: $type-size-4;
   font-weight: bold;
+  text-transform: lowercase;
   border-bottom: 1px solid $border-color;
 }
 
